# cluster-bigartm

./: .gitignore  CMakeLists.txt  LICENSE  README.md  dense_phi_matrix.cc  dense_phi_matrix.h  executer_main.cc  executor_main.cc  master_main.cc  messages.pb.cc  phi_matrix.h  redis.conf  redis_client.cc  redis_client.h  redis_phi_matrix.cc  redis_phi_matrix.h  srcmain.cc  start_executors.py  token.cc
include/: blas.h  common.h  dense_phi_matrix.h  executor_thread.h  helpers.h  messages.pb.h  phi_matrix.h  processor_helpers.h  protobuf_helpers.h  protocol.h  redis_client.h  redis_phi_matrix.h  thread_safe_collection_holder.h  token.h
src/: blas.cc  dense_phi_matrix.cc  executor_main.cc  executor_thread.cc  helpers.cc  master_main.cc  messages.pb.cc  processor_helpers.cc  redis_client.cc  redis_phi_matrix.cc  token.cc
